<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:text="@string/enter_sequence_title"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/dialogEnteredTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#5C5C5C" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogOkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="40dp"
        android:layout_margin="20dp"
        android:text="@string/ok"
        tools:ignore="UnusedAttribute" />
</LinearLayout>