<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sequencer_background"
    tools:context=".activities.SequencerActivity">

    <TextView
        android:id="@+id/sequencerMainName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:fontFamily="@font/aclonica"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/timingView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="■ ■ ■"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/sequencerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/timingView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/timingView"
        app:layout_constraintTop_toTopOf="@+id/timingView"
        app:srcCompat="@drawable/ic_baseline_info_24_1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewContent"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_margin="25dp"
        android:background="@color/mainColor"
        android:onClick="ShowNextHint"
        app:cardBackgroundColor="@color/mainColor"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378"
        tools:ignore="UsingOnClickInXml">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/contentTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/view_content"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/hintTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="10dp"
                android:text="@string/click_on_me_to_start"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_background"
        android:elevation="40dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="BtnViewContent"
        android:padding="10dp"
        android:text="@string/view_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardViewContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardViewContent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewContent"
        tools:ignore="UnusedAttribute,UsingOnClickInXml" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:elevation="40dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="ShowNextHint"
        android:padding="10dp"
        android:text="@string/roll"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnViewContent"
        app:layout_constraintEnd_toEndOf="@+id/cardViewContent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnViewContent"
        app:layout_constraintTop_toTopOf="@+id/btnViewContent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnusedAttribute,UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>